[package]
name = "centipede"
version = "0.2.12"
authors = [
    "Omer <omer@kzencorp.com>",
    "Gary <gary@kzencorp.com>"
]

[lib]
crate-type = ["lib"]

[dependencies]
serde_derive = "1.0"
serde = "1.0"
rayon = "1.0.3"
curv = {path="../curv" ,version="*",default-features = false }
bulletproof = {path="../bulletproofs" ,version="*",default-features = false }


[dev-dependencies]
criterion = "0.2"


[[bench]]
name = "v_backup"
path = "benches/v_backup.rs"
harness = false
